[package]
name = "chzzk-downloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "chzzk_downloader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "cookies"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
futures = "0.3"
zip = "2"
rsa = "0.9"
base64 = "0.22"
hex = "0.4"
num-bigint-dig = "0.8"
rand = "0.8"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
